# spec-ops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/scripts/: create-release-packages.sh
base/memory/: constitution-template.md
memory/: constitution.md
src/specops_cli/: __init__.py  __main__.py  check.py  cli.py  init.py  utils.py
templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/claude/sh/.specops/prompts/: constitution.md  implement.md  plan.md  specify.md  tasks.md
templates/claude/sh/.specops/scripts/: common.sh  create-new-feature.sh  setup-plan.sh
templates/claude/sh/.specops/templates/: constitution-template.md  plan-template.md  tasks-template.md
templates/commands/: clarify.md  constitution.md  deploy.md  implement.md  specify.md
